More collateral damage from mailing list upheaval.

--- a/cgi-bin/cvsweb.conf
+++ b/cgi-bin/cvsweb.conf
@@ -5,7 +5,7 @@
 # (c) 1998-1999 H. Zeller    <zeller@think.de>
 #     1999      H. Nordström <hno@hem.passagen.se>
 #          based on work by Bill Fenner  <fenner@freebsd.org>
-# $Id: cvsweb.conf,v 1.17 1999/02/23 22:41:05 hzeller Exp $
+# $Id: cvsweb.conf,v 1.1 1999/05/17 17:46:02 jsm Exp $
 #
 ###
 
@@ -78,7 +78,7 @@ $logo = '';
 $defaulttitle = "EGCS CVS Repository";
 
 # The address is shown on the footer
-$address = "egcs\@egcs.cygnus.com";
+$address = "gcc\@gcc.gnu.org";
 
 # Default page background color for the diffs
 # and annotations
