cvsweb.cgi cvsweb.conf htsearch listbuilds.pl ml-request :  Update to   new filesystem layout.

--- a/cgi-bin/cvsweb.conf
+++ b/cgi-bin/cvsweb.conf
@@ -5,7 +5,7 @@
 # (c) 1998-1999 H. Zeller    <zeller@think.de>
 #     1999      H. Nordström <hno@hem.passagen.se>
 #          based on work by Bill Fenner  <fenner@freebsd.org>
-# $Id: cvsweb.conf,v 1.1 1999/05/17 17:46:02 jsm Exp $
+# $Id: cvsweb.conf,v 1.2 1999/07/17 09:29:55 law Exp $
 #
 ###
 
@@ -23,12 +23,12 @@
 
 # 'symbolic_name' 'path_to_the_actual_repository'
 %CVSROOT = (
-            'egcs' => '/cvs/egcs',
+            'gcc' => '/cvs/gcc',
 	    );
 
 # This tree is enabled by default when
 # you enter the page
-$cvstreedefault = 'egcs';
+$cvstreedefault = 'gcc';
 
 ##############
 # Defaults for UserSettings
