--- a/cgi-bin/cvsweb.conf
+++ b/cgi-bin/cvsweb.conf
@@ -5,7 +5,7 @@
 # (c) 1998-1999 H. Zeller    <zeller@think.de>
 #     1999      H. Nordström <hno@hem.passagen.se>
 #          based on work by Bill Fenner  <fenner@freebsd.org>
-# $Id: cvsweb.conf,v 1.2 1999/07/17 09:29:55 law Exp $
+# $Id: cvsweb.conf,v 1.3 1999/10/09 03:33:14 jsm Exp $
 #
 ###
 
@@ -75,7 +75,7 @@ $body_tag = '<body text="#000000" bgcolor="#ffffff">';
 $logo = '';
 
 # The title of the Page on startup
-$defaulttitle = "EGCS CVS Repository";
+$defaulttitle = "GCC CVS Repository";
 
 # The address is shown on the footer
 $address = "gcc\@gcc.gnu.org";
@@ -90,7 +90,7 @@ $navigationHeaderColor='#9999EE';
 
 $long_intro = "
 This is a WWW interface to CVS repositories on the 
-<a href=\"http://egcs.cygnus.com/\"><code>egcs.cygnus.com</code></a>
+<a href=\"http://gcc.gnu.org/\"><code>gcc.gnu.org</code></a>
 web site.
 <p>
 If you would like to use this CGI script on your own web server and
