Forward proj-bp.html to projects/bp/main.html

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,2 +1,3 @@
 Redirect permanent /c9xstatus.html http://gcc.gnu.org/c99status.html
 Redirect permanent /timeline.html  http://gcc.gnu.org/releases.html#timeline
+Redirect permanent /proj-bp.html   http://gcc.gnu.org/projects/bp/main.html
