Move all projects web pages to the projects/ subdirectory.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,3 +1,6 @@
 Redirect permanent /c9xstatus.html http://gcc.gnu.org/c99status.html
 Redirect permanent /timeline.html  http://gcc.gnu.org/releases.html#timeline
 Redirect permanent /proj-bp.html   http://gcc.gnu.org/projects/bp/main.html
+Redirect permanent /proj-cpplib.html   http://gcc.gnu.org/projects/cpplib.html
+Redirect permanent /proj-optimize.html http://gcc.gnu.org/projects/optimize.html
+Redirect permanent /projects.html  http://gcc.gnu.org/projects/
