--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -4,3 +4,4 @@ Redirect permanent /proj-bp.html   http://gcc.gnu.org/projects/bp/main.html
 Redirect permanent /proj-cpplib.html   http://gcc.gnu.org/projects/cpplib.html
 Redirect permanent /proj-optimize.html http://gcc.gnu.org/projects/optimize.html
 Redirect permanent /projects.html  http://gcc.gnu.org/projects/
+Redirect permanent /web.html http://gcc.gnu.org/projects/web.html
