--- a/htdocs/java/.htaccess
+++ b/htdocs/java/.htaccess
@@ -1,3 +1,3 @@
-Redirect permanent /FAQ.html http://gcc.gnu.org/java/faq.html
-Redirect permanent /gcj.html http://gcc.gnu.org/java/index.html
-Redirect permanent /libgcj.html http://gcc.gnu.org/java/index.html
+Redirect permanent /java/FAQ.html http://gcc.gnu.org/java/faq.html
+Redirect permanent /java/gcj.html http://gcc.gnu.org/java/index.html
+Redirect permanent /java/libgcj.html http://gcc.gnu.org/java/index.html
