--- a/htdocs/java/.htaccess
+++ b/htdocs/java/.htaccess
@@ -2,3 +2,4 @@ Redirect permanent /java/FAQ.html http://gcc.gnu.org/java/faq.html
 Redirect permanent /java/gcj.html http://gcc.gnu.org/java/index.html
 Redirect permanent /java/libgcj.html http://gcc.gnu.org/java/index.html
 Redirect permanent /java/about.html http://gcc.gnu.org/about.html
+Redirect permanent /java/mail.html http://gcc.gnu.org/lists.html
