Rename gcc-3.0/gcc-3.0.html to gcc-3.0/index.html and provide a redirect. Update the page to cover both 3.0 and 3.0.1, and change several links to that page.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,7 +1,8 @@
-Redirect permanent /c9xstatus.html http://gcc.gnu.org/c99status.html
-Redirect permanent /timeline.html  http://gcc.gnu.org/releases.html#timeline
-Redirect permanent /proj-bp.html   http://gcc.gnu.org/projects/bp/main.html
-Redirect permanent /proj-cpplib.html   http://gcc.gnu.org/projects/cpplib.html
-Redirect permanent /proj-optimize.html http://gcc.gnu.org/projects/optimize.html
-Redirect permanent /projects.html  http://gcc.gnu.org/projects/
-Redirect permanent /web.html http://gcc.gnu.org/projects/web.html
+Redirect permanent /c9xstatus.html		http://gcc.gnu.org/c99status.html
+Redirect permanent /timeline.html		http://gcc.gnu.org/releases.html#timeline
+Redirect permanent /proj-bp.html		http://gcc.gnu.org/projects/bp/main.html
+Redirect permanent /proj-cpplib.html		http://gcc.gnu.org/projects/cpplib.html
+Redirect permanent /proj-optimize.html		http://gcc.gnu.org/projects/optimize.html
+Redirect permanent /projects.html		http://gcc.gnu.org/projects/
+Redirect permanent /web.html			http://gcc.gnu.org/projects/web.html
+Redirect permanent /gcc-3.0/gcc-3.0.html	http://gcc.gnu.org/gcc-3.0/
