Redirect thanks.html.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,3 +6,4 @@ Redirect permanent /proj-optimize.html		http://gcc.gnu.org/projects/optimize.htm
 Redirect permanent /projects.html		http://gcc.gnu.org/projects/
 Redirect permanent /web.html			http://gcc.gnu.org/projects/web.html
 Redirect permanent /gcc-3.0/gcc-3.0.html	http://gcc.gnu.org/gcc-3.0/
+Redirect permanent /thanks.html                 http://gcc.gnu.org/onlinedocs/gcc/Contributors.html
