Redirect reghunt-howto.html, which is now bugs/reghunt.html.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -14,5 +14,6 @@ Redirect permanent /gcc-2.95/gcc-2.95.2.html	http://gcc.gnu.org/gcc-2.95/
 Redirect permanent /gcc-2.95/gcc-2.95.3.html	http://gcc.gnu.org/gcc-2.95/
 Redirect permanent /gcc-3.0/gcc-3.0.html	http://gcc.gnu.org/gcc-3.0/
 Redirect permanent /thanks.html                 http://gcc.gnu.org/onlinedocs/gcc/Contributors.html
+Redirect permanent /reghunt-howto.html          http://gcc.gnu.org/bugs/reghunt.html
 Redirect permanent /onlinedocs/g77_news.html http://gcc.gnu.org/onlinedocs/g77/News.html
 Redirect permanent /onlinedocs/g77_bugs.html http://gcc.gnu.org/onlinedocs/g77/Trouble.html
