2003-04-03  Janis Johnson  <janis187@us.ibm.com>
	* .htaccess: Redirect links for build and test guides.
	* testing/index.html: Remove URLs and version numbers from apps table.
	* testing/testing-blitz.html: Add URL to Blitz++ info.
	* testing/testing-boost.html: Add URL to Boost info, replace source
	URL, and reference version 1.30.0.
	* testing/testing-ftensor.html: Add URL to FTensor info.
	* testing/testing-lapack.html: Add URL to LAPACK info.
	* testing/testing-pooma.html: Add URLs to Qt info and sources.
	* testing/testing-qt.html: Add URL to Qt info.
	* gcc-3.3/criteria.html: Remove URLs and version numbers from apps
	table.
	* gcc-3.1/criteria.html: Remove URLs and version numbers from apps
	table, reference build and test guides in testing/.
	* gcc-3.1/testing-blitz.html: Delete file.
	* gcc-3.1/testing-boost.html: Delete file.
	* gcc-3.1/testing-ftensor.html: Delete file.
	* gcc-3.1/testing-lapack.html: Delete file.
	* gcc-3.1/testing-pooma.html: Delete file.
	* gcc-3.1/testing-qt.html: Delete file.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -17,3 +17,9 @@ Redirect permanent /thanks.html                 http://gcc.gnu.org/onlinedocs/gc
 Redirect permanent /reghunt-howto.html          http://gcc.gnu.org/bugs/reghunt.html
 Redirect permanent /onlinedocs/g77_news.html http://gcc.gnu.org/onlinedocs/g77/News.html
 Redirect permanent /onlinedocs/g77_bugs.html http://gcc.gnu.org/onlinedocs/g77/Trouble.html
+Redirect permanent /gcc-3.1/testing-blitz.html  http://gcc.gnu.org/testing/testing-blitz.html  
+Redirect permanent /gcc-3.1/testing-boost.html  http://gcc.gnu.org/testing/testing-boost.html  
+Redirect permanent /gcc-3.1/testing-ftensor.html  http://gcc.gnu.org/testing/testing-ftensor.html  
+Redirect permanent /gcc-3.1/testing-lapack.html http://gcc.gnu.org/testing/testing-lapack.html  
+Redirect permanent /gcc-3.1/testing-pooma.html  http://gcc.gnu.org/testing/testing-pooma.html  
+Redirect permanent /gcc-3.1/testing-qt.html     http://gcc.gnu.org/testing/testing-qt.html  
