Set allow_annotate to 0.  It doesn't currently work anyhow, because cvs annotate requires the ability to create a CVS lock, and httpd runs as user `apache', and that user is not permitted to create locks in the CVS repositories.  Changing LockDir is difficult because it breaks the uberbaum meta-repository.  So until and unless this gets fixed, disallow annotate.

--- a/cgi-bin/cvsweb.conf
+++ b/cgi-bin/cvsweb.conf
@@ -5,7 +5,7 @@
 # (c) 1998-1999 H. Zeller    <zeller@think.de>
 #     1999      H. Nordström <hno@hem.passagen.se>
 #          based on work by Bill Fenner  <fenner@freebsd.org>
-# $Id: cvsweb.conf,v 1.3 1999/10/09 03:33:14 jsm Exp $
+# $Id: cvsweb.conf,v 1.4 2000/05/04 01:31:33 mrs Exp $
 #
 ###
 
@@ -241,7 +241,7 @@ $mime_types='/www/conf/mime.types';
 # CVSROOT/history - file and rw-access
 # to the subdirectory to place the lock
 # so you maybe don't want it
-$allow_annotate=1;
+$allow_annotate=0;
 
 # allow pretty-printed version of files
 $allow_markup=1;
