--- a/cgi-bin/cvsweb.conf
+++ b/cgi-bin/cvsweb.conf
@@ -5,7 +5,7 @@
 # (c) 1998-1999 H. Zeller    <zeller@think.de>
 #     1999      H. Nordström <hno@hem.passagen.se>
 #          based on work by Bill Fenner  <fenner@freebsd.org>
-# $Id: cvsweb.conf,v 1.4 2000/05/04 01:31:33 mrs Exp $
+# $Id: cvsweb.conf,v 1.5 2003/05/10 21:15:58 ian Exp $
 #
 ###
 
@@ -241,7 +241,7 @@ $mime_types='/www/conf/mime.types';
 # CVSROOT/history - file and rw-access
 # to the subdirectory to place the lock
 # so you maybe don't want it
-$allow_annotate=0;
+$allow_annotate=1;
 
 # allow pretty-printed version of files
 $allow_markup=1;
