--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -1,10 +1,3 @@
-Redirect permanent /c9xstatus.html		http://gcc.gnu.org/c99status.html
-Redirect permanent /timeline.html		http://gcc.gnu.org/releases.html#timeline
-Redirect permanent /proj-bp.html		http://gcc.gnu.org/projects/bp/main.html
-Redirect permanent /proj-cpplib.html		http://gcc.gnu.org/projects/cpplib.html
-Redirect permanent /proj-optimize.html		http://gcc.gnu.org/projects/optimize.html
-Redirect permanent /projects.html		http://gcc.gnu.org/projects/
-Redirect permanent /web.html			http://gcc.gnu.org/projects/web.html
 Redirect permanent /egcs-1.1/egcs-1.1.html	http://gcc.gnu.org/egcs-1.1/
 Redirect permanent /egcs-1.1/egcs-1.1.1.html	http://gcc.gnu.org/egcs-1.1/
 Redirect permanent /egcs-1.1/egcs-1.1.2.html	http://gcc.gnu.org/egcs-1.1/
@@ -13,13 +6,25 @@ Redirect permanent /gcc-2.95/gcc-2.95.1.html	http://gcc.gnu.org/gcc-2.95/
 Redirect permanent /gcc-2.95/gcc-2.95.2.html	http://gcc.gnu.org/gcc-2.95/
 Redirect permanent /gcc-2.95/gcc-2.95.3.html	http://gcc.gnu.org/gcc-2.95/
 Redirect permanent /gcc-3.0/gcc-3.0.html	http://gcc.gnu.org/gcc-3.0/
-Redirect permanent /thanks.html                 http://gcc.gnu.org/onlinedocs/gcc/Contributors.html
-Redirect permanent /reghunt-howto.html          http://gcc.gnu.org/bugs/reghunt.html
-Redirect permanent /onlinedocs/g77_news.html http://gcc.gnu.org/onlinedocs/g77/News.html
-Redirect permanent /onlinedocs/g77_bugs.html http://gcc.gnu.org/onlinedocs/g77/Trouble.html
+
 Redirect permanent /gcc-3.1/testing-blitz.html  http://gcc.gnu.org/testing/testing-blitz.html  
 Redirect permanent /gcc-3.1/testing-boost.html  http://gcc.gnu.org/testing/testing-boost.html  
 Redirect permanent /gcc-3.1/testing-ftensor.html  http://gcc.gnu.org/testing/testing-ftensor.html  
 Redirect permanent /gcc-3.1/testing-lapack.html http://gcc.gnu.org/testing/testing-lapack.html  
 Redirect permanent /gcc-3.1/testing-pooma.html  http://gcc.gnu.org/testing/testing-pooma.html  
 Redirect permanent /gcc-3.1/testing-qt.html     http://gcc.gnu.org/testing/testing-qt.html  
+
+Redirect permanent /onlinedocs/g77_news.html http://gcc.gnu.org/onlinedocs/g77/News.html
+Redirect permanent /onlinedocs/g77_bugs.html http://gcc.gnu.org/onlinedocs/g77/Trouble.html
+
+Redirect permanent /c9xstatus.html		http://gcc.gnu.org/c99status.html
+Redirect permanent /gnats.html                  http://gcc.gnu.org/bugs.html
+Redirect permanent /proj-bp.html		http://gcc.gnu.org/projects/bp/main.html
+Redirect permanent /proj-cpplib.html		http://gcc.gnu.org/projects/cpplib.html
+Redirect permanent /proj-optimize.html		http://gcc.gnu.org/projects/optimize.html
+Redirect permanent /projects.html		http://gcc.gnu.org/projects/
+Redirect permanent /reghunt-howto.html          http://gcc.gnu.org/bugs/reghunt.html
+Redirect permanent /thanks.html                 http://gcc.gnu.org/onlinedocs/gcc/Contributors.html
+Redirect permanent /timeline.html		http://gcc.gnu.org/releases.html#timeline
+Redirect permanent /web.html			http://gcc.gnu.org/projects/web.html
+
